2002-09-21  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/protocols/http.py (Request.setLastModified): Use
	setLastModified to set a timestamp on a http.Request object, and
	it will add a Last-Modified header to the outgoing reply.

	* twisted/web/resource.py (Resource.wasModifiedSince): companion
	method, override this to get sensible handling of
	If-Modified-Since conditional requests.

2002-09-21  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/web/static.py, twisted/web/script.py: Previously, it was
	  not possible to use the same xmlmvc application (directory full
	  of files and all) to interface to separate instances in the same
	  server, without a considerable amount of hassle.  We have
	  introduced a new "Registry" object which is passed to all .rpy
	  and .epy scripts as "registry" in the namespace.  This is a
	  componentized, so it can be used to associate different
	  components for the same interface for different File instances
	  which represent the same underlying directory.

2002-09-20  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/web/microdom.py: You can now specify tags that the
	  parser will automatically close if they are not closed
	  immediately.  This is to support output from HTML editors which
	  will not output XML, but still have a predictable
	  almost-but-not-quite XML structure.  Specifically it has been
	  tested with Mozilla Composer.

2002-9-20  Moshe Zadka <moshez@twistedmatrix.com>

	* Documenting for others

	* setup.py: now setup.py can function as a module

	* twisted/enterprise/xmlreflector.py: deprintified

	* twisted/internet/abstract.py, twisted/internet/fdesc.py,
	  twisted/internet/app.py, twisted/internet/gtkreactor.py,
	  twisted/internet/main.py, twisted/internet/protocol.py,
	  twisted/internet/ssl.py, twisted/internet/tksupport.py,
	  twisted/internet/pollreactor.py, twisted/internet/defer.py:
	  added and modified __all__
