@@ -1,3 +1,8 @@
+2002-9-23  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/spread/pb.py: add getObjectAtSSL, refactored into
+	getObjectRetreiver so more transports can be easily supported
+
 2002-09-21  Kevin Turner  <acapnotic@twistedmatrix.com>
 
 	* twisted/protocols/http.py (Request.setLastModified): Use
